examples/fail/where_section5.niu
import "std/opes.niu"
import "std/vec.niu"
struct Hoge {} {
}

trait CloneThrow {
  fn clone_throw<T>(t: T) -> void
    where T: Clone;
}

impl CloneThrow for Hoge {
  fn clone_throw<T>(t: T) -> void
    where T: Clone {}
}

fn main() -> void {
  let mut v = Vec::new();
  let b = Hoge#CloneThrow::clone_throw(&v[0]);
  v.push(1);
}
